--- a/index.html
+++ b/index.html
@@ -116,52 +116,6 @@
       color: #9b5eff;
       margin-bottom: 1rem;
     }
-    .contact form {
-      max-width: 500px;
-      margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      gap: 1.2rem;
-    }
-    .form-group {
-      display: flex;
-      flex-direction: column;
-      text-align: left;
-    }
-    .form-group label {
-      margin-bottom: 0.4rem;
-      color: #bbb;
-      font-size: 0.95rem;
-    }
-    .form-group input,
-    .form-group textarea {
-      background: #2a2a40;
-      color: white;
-      padding: 0.9rem 1rem;
-      border: 2px solid transparent;
-      border-radius: 8px;
-      font-size: 1rem;
-      transition: border-color 0.2s, box-shadow 0.2s;
-    }
-    .form-group input:focus,
-    .form-group textarea:focus {
-      outline: none;
-      border-color: #9b5eff;
-      box-shadow: 0 0 0 3px #9b5eff33;
-    }
-    .contact button {
-      background: #9b5eff;
-      padding: 0.8rem;
-      border: none;
-      border-radius: 8px;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .contact button:hover {
-      background: #7d3eff;
-    }
     .confirmation-msg {
       color: #4cff4c;
       font-size: 1.2rem;
@@ -169,74 +123,89 @@
       font-weight: 500;
       display: none;
     }
-    .error-msg {
-      color: #ff4c4c;
-      font-size: 1.1rem;
-      margin-top: 1.5rem;
-      font-weight: 500;
-      display: none;
+    .contact iframe {
+      width: 100%;
+      max-width: 640px;
+      height: 686px;
+      border: none;
+      border-radius: 8px;
     }
   </style>
   <script>
-    async function handleSubmit(event) {
-      event.preventDefault();
-      const form = event.target;
-      const submitBtn = form.querySelector('button');
-      const name = form.name.value;
-      const email = form.email.value;
-      const message = form.message.value;
-
-      submitBtn.disabled = true;
-      document.getElementById("confirmation").style.display = "none";
-      document.getElementById("error").style.display = "none";
-
-      try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbz986JzduRO5z9wWUPXmXmoxoV_HD2RCgVqzHfL13SJce9ouCPd7wcTOB93HjKEw1Rw/exec', {
-          method: 'POST',
-          body: JSON.stringify({ name, email, message }),
-          headers: { 'Content-Type': 'application/json' }
-        });
-
-        const data = await response.json();
-        if (data.success) {
-          document.getElementById("confirmation").style.display = "block";
-          form.reset();
-        } else {
-          document.getElementById("error").style.display = "block";
-        }
-      } catch (err) {
-        console.error("Error!", err);
-        document.getElementById("error").style.display = "block";
+    window.addEventListener("message", (e) => {
+      if (e.origin.includes("google.com") && e.data === "submit") {
+        document.getElementById("confirmation").style.display = "block";
+        window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
       }
-
-      submitBtn.disabled = false;
-    }
+    });
   </script>
 </head>
 <body>
-  <!-- Content Sections Above -->
+  <header>
+    <div style="font-weight: bold; font-size: 1.5rem; color: #9b5eff;">Divyansh | DevZone</div>
+    <div class="nav-links">
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#timeline">Timeline</a>
+    </div>
+  </header>
+
+  <section class="hero">
+    <h1>Hi, I'm <span>Divyansh</span></h1>
+    <p>A passionate programmer and a consistent learner who grows by building and breaking real-world projects. I believe in polishing my skills through hands-on experiences.</p>
+    <div class="setup">
+      <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="Developer Logo" />
+    </div>
+  </section>
+
+  <section class="roles">
+    <div class="role-box">
+      <img src="https://cdn-icons-png.flaticon.com/512/5968/5968350.png" alt="Python" />
+      <h3>Python Developer</h3>
+    </div>
+    <div class="role-box">
+      <img src="https://cdn-icons-png.flaticon.com/512/919/919836.png" alt="MySQL" />
+      <h3>MySQL (Advanced)</h3>
+    </div>
+    <div class="role-box">
+      <img src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" alt="JavaScript" />
+      <h3>JavaScript (Intermediate)</h3>
+    </div>
+    <div class="role-box">
+      <img src="https://cdn-icons-png.flaticon.com/512/732/732212.png" alt="HTML/CSS" />
+      <h3>HTML & CSS (Intermediate)</h3>
+    </div>
+  </section>
+
+  <section class="timeline" id="timeline">
+    <div class="timeline-item">
+      <h3>Class 6 - The Beginning</h3>
+      <p>My journey into the world of computers and programming started in Class 6, where curiosity drove me to explore how software really works.</p>
+    </div>
+    <div class="timeline-item">
+      <h3>Class 7 - First Inter-Branch Experience</h3>
+      <p>I switched my branch in Class 7, which opened my mind to new environments and challenges, further fueling my interest in coding and development.</p>
+    </div>
+    <div class="timeline-item">
+      <h3>Class 11 - Passion Evolves</h3>
+      <p>Once again, I shifted my branch, solidifying my direction toward Computer Science. I explored advanced topics and laid the groundwork for real development.</p>
+    </div>
+    <div class="timeline-item">
+      <h3>Class 12 - Project Developer</h3>
+      <p>I created two major projects using Python and MySQL. Feel free to explore them below:</p>
+      <div class="projects">
+        <a href="https://github.com/div-yan-sh/Banking_Management" target="_blank">🔗 Banking Management System</a>
+        <a href="https://github.com/div-yan-sh/Toll_Management" target="_blank">🔗 Toll Management System</a>
+      </div>
+      <p>I also guided several classmates in building their own systems.</p>
+    </div>
+  </section>
+
   <section class="contact">
     <h2>Have a query or want to connect?</h2>
-    <form onsubmit="handleSubmit(event)">
-      <div class="form-group">
-        <label for="name">Your Name</label>
-        <input type="text" id="name" name="name" placeholder="Your Name" required />
-      </div>
-      <div class="form-group">
-        <label for="email">Your Email</label>
-        <input type="email" id="email" name="email" placeholder="Your Email" required />
-      </div>
-      <div class="form-group">
-        <label for="message">Your Message</label>
-        <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
-      </div>
-      <button type="submit">Send Message</button>
-    </form>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdBjQpN8-1F52ZbcYxx15JOzOaBCXPHEu-i-QIJEVRjWjEE-g/viewform?embedded=true" allow="fullscreen">Loading…</iframe>
     <div id="confirmation" class="confirmation-msg">
       ✅ Your message has been submitted successfully. I'll get back to you shortly!
-    </div>
-    <div id="error" class="error-msg">
-      ❌ Something went wrong. Please try again later.
     </div>
   </section>
 </body>
